# badged

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/defalsified/android/badged/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  org_defalsified_android_LibQaeda.c  org_defalsified_android_badged_services_Cert.c  org_defalsified_android_badged_services_LibQaeda.c
app/src/main/cpp/libs/include/: gpgrt.h
app/src/main/java/org/defalsified/android/badged/: MainActivity.java
app/src/main/java/org/defalsified/android/badged/dto/: BadgeDTO.java
app/src/main/java/org/defalsified/android/badged/models/: Badge.java
app/src/main/java/org/defalsified/android/badged/services/: BadgeRepository.java  BadgeService.java  Cert.java  CertificateService.java  LibQaeda.java  WalletManager.java  org_defalsified_android_badged_services_Cert.h
app/src/main/java/org/defalsified/android/badged/ui/badges/: BadgeAdapter.java  BadgeDetailActivity.java  BadgeGalleryActivity.java
app/src/main/java/org/defalsified/android/badged/ui/onboarding/: OnboardingActivity.java  OnboardingAdapter.java  OnboardingPage.java
app/src/main/java/org/defalsified/android/badged/ui/scanner/: QrCodeAnalyzer.java  QrScannerActivity.java
app/src/main/java/org/defalsified/android/badged/utils/: PrefsManager.java  QrCodeParser.java
app/src/main/res/drawable/: badge_placeholder.xml  ic_empty_badges.xml  ic_voucher_foreground.xml  new_badge_background.xml  onboarding_collect.xml  onboarding_scan.xml  onboarding_wallet.xml  scan_box.xml  tab_selector.xml
app/src/main/res/layout/: activity_badge_detail.xml  activity_badge_gallery.xml  activity_main.xml  activity_onboarding.xml  activity_qr_scanner.xml  item_badge.xml  item_onboarding.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/defalsified/android/badged/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
